--- a/example_widget.html
+++ b/example_widget.html
@@ -1,1 +1,1 @@
-<div id="value-display" style="font-size: 48px; color: white;">Loading...</div>
+<div id="donations" style="font-size: 48px; color: white;">Loading...</div>
