updated to include target values

--- a/example_widget.html
+++ b/example_widget.html
@@ -1,1 +1,4 @@
-<div id="donations" style="font-size: 48px; color: white;">Loading...</div>
+<div style="font-size:48px;color:black;">
+  <span id="donations"></span> /
+  <span id="target"></span>
+</div>
