updated html for nicer look

--- a/example_widget.html
+++ b/example_widget.html
@@ -1,4 +1,4 @@
 <div style="font-size:48px;color:black;">
-  <span id="donations"></span> /
-  <span id="target"></span>
+  <span id="donations" stype="font-size: 48px; color: black;">Loading...</span> /
+  $<span id="target" stype="font-size: 48px; color: black;">Loading...</span>
 </div>
